🚧 Set margin to global-footer to prevent it from being overlapped

--- a/styles/layouts/_global-footer.scss
+++ b/styles/layouts/_global-footer.scss
@@ -2,7 +2,7 @@
   padding-top: 32px;
   padding-bottom: 40px;
   background-color: $background;
-
+  margin-bottom: $order-cta-height;
   &-title {
     @include text-style(13, $dark);
     font-weight: 700;
@@ -45,6 +45,8 @@
   }
 
   @include responsive(D) {
+    margin-bottom: 0;
+
     &-title {
       @include text-style(14);
     }
